# boost-log-wrapper

./: CMakeLists.txt  log.hpp  test.cpp
